test/e2e/app-dir/errors/app/global-error-boundary/server/page.js
export default function Page() {
  throw Error('custom server error')
}
